# fjs

./: README.md  flutter_rust_bridge.yaml  pubspec.yaml
.run/: dart fix.run.xml  frb gen.run.xml
android/: build.gradle
cargokit/build_tool/lib/src/: android_environment.dart
esm_bundler/: .gitignore  .prettierrc  eslint.config.mjs  jest.config.cjs  package.json  tsconfig.json
esm_bundler/scripts/: build.ts
esm_bundler/src/module/: test.ts
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/assets/: test.js
example/integration_test/: simple_test.dart
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/windows/flutter/: generated_plugins.cmake
ios/: fjs.podspec
lib/: fjs.dart
lib/src/frb/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/frb/api/: js.dart  js.freezed.dart  value.dart  value.freezed.dart
libfjs/: Cargo.toml
libfjs/src/: frb_generated.rs  lib.rs
libfjs/src/api/: js.rs  mod.rs  value.rs
libfjs/src/js/: console.rs  fetch.rs  mod.rs  value.rs
macos/: fjs.podspec
