[package]
name = "fjs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.95"
bytes = "1.10.0"
cookie = "0.18.1"
cookie_store = { version = "0.21.1", features = ["preserve_order"] }
flutter_rust_bridge = "=2.8.0"
itertools = "0.14.0"
log = "0.4.25"
reqwest = { version = "0.12.12", features = ['rustls-tls', 'json', 'socks', 'cookies', 'charset', 'http2', 'brotli', 'gzip', 'deflate', 'zstd'], default-features = false }
rquickjs = { version = "0.9.0", features = ["full-async", "bindgen", "loader", "dyn-load", "parallel"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_urlencoded = "0.7.1"
tokio = { version = "1.43.0", features = ["full"] }
url = "2.5.4"

[dev-dependencies]
env_logger = "0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }



[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true  # Enable link time optimization
codegen-units = 1  # Reduce parallel code generation units
#panic = "abort"
