[package]
name = "fjs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1"
bytes = "1"
cookie = "0.18.1"
cookie_store = { version = "0.21.1", features = ["preserve_order"] }
flutter_rust_bridge = "=2.9.0"
itertools = "0.14.0"
log = "0.4"
reqwest = { version = "0.12", features = ['rustls-tls', 'json', 'socks', 'cookies', 'charset', 'http2', 'brotli', 'gzip', 'deflate', 'zstd'], default-features = false }
rquickjs = { version = "0.9", features = ["full-async", "bindgen", "loader", "dyn-load", "parallel", "macro", "futures"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7.1"
tokio = { version = "1", features = ["full"] }
url = "2.5.4"
extend = "1.2.0"
delegate-attr = "0.3.0"

[dev-dependencies]
env_logger = "0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }



[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true  # Enable link time optimization
codegen-units = 1  # Reduce parallel code generation units
#panic = "abort"
